Enhancement/kotlin (#52)
* Add Codacy badge

* Update README.md

we move to kubeless

* countries etc.

* using https://github.com/americanexpress/nodes

* linting

* names refactored

* Autowired removal started
UserIntegrationTests
country test

* another round